<resources>
    <string name="app_name">Prozone</string>
    <string name="todo">TODO</string>
    <string name="capstone_the_easiest">Capstone The \'Easiest\'</string>
    <!--    <string name="default_web_client_id">web id</string>-->
    <string name="thinking_of_ideas">Thinking Of Ideas?</string>
    <string name="let_s_join_the_community">Let\'s Join The Community.</string>
    <string name="books_are_most_important_for_a_student_and_if_can_be_gathered_at_one_place_it_will_be_very_helpful_this_app_contains_number_of_books_which_are_needed_for_a_student_in_college_classified_subject_wise_the_app_is_created_using_android_studio">Books are most important for a student and if can be gathered at one place, it will be very helpful. This app contains number of books which are needed for a student in college classified subject wise. The App is created using android studio</string>
    <string name="this_project_is_about_extracting_dominant_colors_from_a_user_entered_image_it_is_a_python_code_which_also_shows_the_rgb_value_and_hex_codes_of_the_colors_extracted_from_the_image_placed_in_the_color_palette_for_this_we_used_various_libraries_like_opencv_numpy_pil_etc_the_basic_technology_used_is_k_means_clustering">This project is about extracting dominant colors from a user-entered image. It is a python code, which also shows the RGB value, and HEX codes of the colors extracted from the image placed in the color palette. For this, we used various libraries like OpenCV, Numpy, PIL, etc. The basic technology used is K-means clustering.</string>
    <string name="a_hardware_project_containing_sensors_can_be_classified_as_an_electronics_project_which_will_help_in_detecting_the_leakage_of_various_gases_in_surrounding_can_be_used_as_a_safety_machine_in_public_places_to_reduce_accident_chances">A Hardware project containing sensors can be classified as an electronics project which will help in detecting the leakage of various gases in surrounding can be used as a safety machine in public places to reduce accident chances</string>
    <string name="a_website_which_provides_a_platform_which_connects_the_hospitals_that_are_nearby_to_the_patient_this_project_requires_internet_connection_as_it_runs_dynamically_this_application_stores_review_of_user_account_information_in_the_database_server_this_web_application_merges_many_applications_like_nearest_search_of_hospital_address_and_phone_no_of_hospital_specializations_of_hospitals_and_doctors_appointment_etc_so_it_becomes_more_convenient_to_user">A website which provides a platform which connects the hospitals that are nearby to the patient. This project requires internet connection as it runs dynamically. This application stores review of user account information in the database server. This web application merges many applications like nearest search of hospital, address and phone no. of hospital, specializations of hospitals and doctors, appointment etc... so it becomes more convenient to user.</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
</resources>